--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_NAME=Inquitream_db
 DB_USER=postgres
-DB_PASSWORD=Anjali1629
+DB_PASSWORD=sneha123
 DB_HOST=localhost
 DB_DIALECT=postgres
 PORT=5000
